# rusty_chat

./: Cargo.toml  README.md  test.sh
migrations/2022-07-26-235102_users/: up.sql
migrations/2022-08-10-232131_create_groups/: down.sql  up.sql
src/: auth.rs  errors.rs  lib.rs  main.rs  models.rs  schema.rs
src/group/: handlers.rs  models.rs
src/user/: api_schemas.rs  auth.rs  handlers.rs  mod.rs  models.rs
