[package]
name = "rusty_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
jsonwebtoken = "=7.2"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync", "time"] }
warp = "0.2"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
log = "0.4.17"

[lib]
name = "rusty_chat"
path = "src/main.rs"

[[bin]]
name = "rusty_chat_cli"
path = "src/bin/main.rs"